# brevo_discord_webhook

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.sample
.github/workflows/: docker-image.yml
src/: main.rs
src/.github/workflows/: docker-image.yml
src/app/: brevo_events.rs  ip.rs  mod.rs  webhook.rs
src/security/: error.rs  ip_filtering.rs  mod.rs
